Dashed line, animation showing content

--- a/app/templates/modules/footer.pug
+++ b/app/templates/modules/footer.pug
@@ -4,7 +4,7 @@ mixin footer-box-nav-social-group-link(json)
       +icon(data.ico, 'svg')
 
 mixin footer()
-  footer.footer&attributes(attributes)
+  footer.footer.visual-animation-base-block&attributes(attributes)
     .content.footer-box
       .footer-box-row
         .footer-box-nav-production
