--- a/app/templates/modules/wherebuy.pug
+++ b/app/templates/modules/wherebuy.pug
@@ -1,11 +1,11 @@
 mixin wherebuy
-  section.wherebuy
+  section.wherebuy.visual-animation-base-block
     .content.wherebuy-box
       .wherebuy-group&attributes(attributes)
         .left
-          .title Где купить?
+          .title.visual-animation-base Где купить?
           .desc Мы представлены в самые крупных и популярных торговых сетях в России.
-        .right
+        .right.visual-animation-base-block
           +link('Подробнее', '#', 'true')
     .shopsbg-marquee
       .shopsbg-list
