--- a/app/templates/pages/catalog-products.pug
+++ b/app/templates/pages/catalog-products.pug
@@ -10,9 +10,10 @@ block variables
 block content
     +header()
     section.main-products
+      canvas.main-catalog-products-dashed(width="100%", height="100%")
       .content.main-products-box
         span.title-page Вытяжные
-        .main-products-category
+        .main-products-category.visual-animation-base-block
           a.main-products-category-el(href="#")
             .category-el-icon
               +icon('img-catalog-product-1', 'svg').icon-background
@@ -36,21 +37,21 @@ block content
             
         .main-products-items
           a.products-el(href="./product.html.html")
-            .products-el-img
+            .products-el-img.visual-animation-base-block
               img(src="./images/img-products-1-min.png")
               img(src="./images/img-products-1-min.png")
-            .products-el-title Сыр «Охотничий» копченый
-            .products-el-hover
+            .products-el-title.visual-animation-base Сыр «Охотничий» копченый
+            .products-el-hover.visual-animation-base-block
               +icon('rhombus', 'svg').rhombus-1
               +icon('rhombus', 'svg').rhombus-2
               +icon('cloud-2', 'svg').cloud-1
               +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="./product.html")
-            .products-el-img
+            .products-el-img.visual-animation-base-block
               img(src="./images/img-products-2-min.png")
               img(src="./images/img-products-2-min.png")
-            .products-el-title Сыр Косичка «Гиагинский» копченый
+            .products-el-title.visual-animation-base Сыр Косичка «Гиагинский» копченый
             .products-el-hover
               +icon('rhombus', 'svg').rhombus-1
               +icon('rhombus', 'svg').rhombus-2
@@ -58,10 +59,10 @@ block content
               +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="./product.html")
-            .products-el-img
+            .products-el-img.visual-animation-base-block
               img(src="./images/img-products-3-min.png")
               img(src="./images/img-products-3-min.png")
-            .products-el-title Сыр «Чечил» копченый
+            .products-el-title.visual-animation-base Сыр «Чечил» копченый
             .products-el-hover
               +icon('rhombus', 'svg').rhombus-1
               +icon('rhombus', 'svg').rhombus-2
@@ -69,10 +70,10 @@ block content
               +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="./product.html")
-            .products-el-img
+            .products-el-img.visual-animation-base-block
               img(src="./images/img-products-4-min.png")
               img(src="./images/img-products-4-min.png")
-            .products-el-title Сыр «Чечил»
+            .products-el-title.visual-animation-base Сыр «Чечил»
             .products-el-hover
               +icon('rhombus', 'svg').rhombus-1
               +icon('rhombus', 'svg').rhombus-2
@@ -80,10 +81,10 @@ block content
               +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="./product.html")
-            .products-el-img
+            .products-el-img.visual-animation-base-block
               img(src="./images/img-products-5-min.png")
               img(src="./images/img-products-5-min.png")
-            .products-el-title Сыр «Спагетти» «Гиагинский» копченый
+            .products-el-title.visual-animation-base Сыр «Спагетти» «Гиагинский» копченый
             .products-el-hover
               +icon('rhombus', 'svg').rhombus-1
               +icon('rhombus', 'svg').rhombus-2
@@ -91,10 +92,10 @@ block content
               +icon('cloud-1', 'svg').cloud-2
 
           a.products-el(href="./product.html")
-            .products-el-img
+            .products-el-img.visual-animation-base-block
               img(src="./images/img-products-6-min.png")
               img(src="./images/img-products-6-min.png")
-            .products-el-title Сыр «Косичка» «Гиагинский»
+            .products-el-title.visual-animation-base Сыр «Косичка» «Гиагинский»
             .products-el-hover
               +icon('rhombus', 'svg').rhombus-1
               +icon('rhombus', 'svg').rhombus-2
