--- a/app/templates/pages/news_list.pug
+++ b/app/templates/pages/news_list.pug
@@ -13,9 +13,9 @@ block content
     .text-left Новости
     .content
       .news-header
-        h1.page-title Новости и Акции
+        h1.page-title.visual-animation-base Новости и Акции
       .news-row
-        a.news-item(style="--color_rect: #FFF3D6" 
+        a.news-item.visual-animation-base-block(style="--color_rect: #FFF3D6"
           href="./news_detail.html")
           .news-item-image
             img(src="./images/news-background-1.jpg" alt="Новость 1")
@@ -24,7 +24,7 @@ block content
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_detail.html")
+        a.news-item.visual-animation-base-block(href="./news_detail.html")
           .news-content
             .news-type Акция
             .news-time 
@@ -33,7 +33,7 @@ block content
               span по 
               |12.04.2020
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_detail.html")
+        a.news-item.visual-animation-base-block(href="./news_detail.html")
           .news-content
             .news-type Акция
             .news-time
@@ -42,37 +42,37 @@ block content
               span по 
               |12.04.2020
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_detail.html")
+        a.news-item.visual-animation-base-block(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_detail.html")
+        a.news-item.visual-animation-base-block(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_detail.html")
+        a.news-item.visual-animation-base-block(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_detail.html")
+        a.news-item.visual-animation-base-block(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(href="./news_detail.html")
+        a.news-item.visual-animation-base-block(href="./news_detail.html")
           .news-content
             .news-type Новость
             .news-time 25.05. 
               span 2019
             .news-text Молочный завод «Янино» стал участником благотворительного новогоднего мероприятия «завтрак в манеже»
-        a.news-item(style="--color_rect: #E6FAE1"
+        a.news-item.visual-animation-base-block(style="--color_rect: #E6FAE1"
           href="./news_detail.html")
           .news-item-image
             img(src="./images/news-background-2.jpg" alt="Новость 1")
