--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -1,10 +1,15 @@
-.visual-animation-showing{
+
+.visual-animation-word {
+  white-space: nowrap;
+}
+
+.visual-animation-showing {
   -webkit-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
   transform-style: flat;
 
-  > * {
+  > * > * {
     -webkit-animation: notransform 1s;
     animation: notransform 1s;
     opacity: 1.0;
@@ -12,44 +17,53 @@
     display: inline-block;
   }
 }
-@for $i from 1 through 100 {
-  .visual-animation-showing > *:nth-child(#{$i}n) {
-    animation-delay: #{$i * 30}ms;
+
+@for $i from 1 through 10 {
+  @for $j from 1 through 50 {
+    .visual-animation-showing > *:nth-child(#{$i}n) > *:nth-child(#{$j}n) {
+      animation-delay: #{$i*$j * 30}ms;
+    }
   }
   .visual-animation-showing-block > *:nth-child(#{$i}n) {
     animation-delay: #{$i * 30}ms;
   }
 }
-.visual-animation-base-block{
+
+.visual-animation-base-block {
   -webkit-transform-style: flat;
   transform-style: flat;
+
   > * {
     transform-origin: bottom center 0px;
     -webkit-transform-origin: bottom center 0px;
     opacity: 0.0 !important;
-    -webkit-transform: translate(0px,100px);
-    -ms-transform: translate(0px,100px);
-    transform: translate(0px,100px);
+    -webkit-transform: translate(0px, 100px);
+    -ms-transform: translate(0px, 100px);
+    transform: translate(0px, 100px);
   }
 }
-.visual-animation-showing-block{
-  > *{
+
+.visual-animation-showing-block {
+  > * {
     opacity: 1.0;
     -webkit-animation: notransform 1s;
     animation: notransform 1s;
     animation-fill-mode: forwards;
   }
 }
-.visual-animation-base{
+
+.visual-animation-base {
   -webkit-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
   transform-style: flat;
-  > * {
-    transform: matrix3d(1,0,0.00,0,0.00,0,1.00,0,0,-1,0,0,0,50,0,1);
-    -webkit-transform: matrix3d(1,0,0.00,0,0.00,0,1.00,0,0,-1,0,0,0,50,0,1);
+
+  > * > * {
+    transform: matrix3d(1, 0, 0.00, 0, 0.00, 0, 1.00, 0, 0, -1, 0, 0, 0, 50, 0, 1);
+    -webkit-transform: matrix3d(1, 0, 0.00, 0, 0.00, 0, 1.00, 0, 0, -1, 0, 0, 0, 50, 0, 1);
     transform-origin: bottom center 0px;
     -webkit-transform-origin: bottom center 0px;
+
     &span {
       display: inline-block;
     }
@@ -66,27 +80,29 @@
     transform: none;
     opacity: 1.0;
   }
-  50%{
+  50% {
     opacity: 0.5;
   }
-  0%{
+  0% {
     opacity: 0.0;
   }
 }
+
 @keyframes notransform {
   100% {
     transform: none;
     opacity: 1.0;
   }
-  50%{
+  50% {
     opacity: 0.5;
   }
-  0%{
+  0% {
     opacity: 0.0;
   }
 }
+
 //// image background
-.image-background-showed{
+.image-background-showed {
   opacity: 1.0 !important;
   display: block;
   position: absolute;
@@ -95,58 +111,102 @@
   transition: opacity 500ms ease 0s;
   z-index: 4;
 }
-.image-background-hidden{
+
+.image-background-hidden {
   opacity: 0.0 !important;
   transition: opacity 500ms ease 0s;
   z-index: -1;
 }
-.image-background-parent-index, .image-background-index{
+
+.image-background-parent-index, .image-background-index {
   z-index: 5 !important;
   position: relative !important;
 }
-.image-background-base{
+
+.image-background-base {
   z-index: 5 !important;
   position: relative !important;
 }
-.animationImageBefore.animationImage{
+
+.animationImageBefore.animationImage {
   -webkit-transform: scale(1);
   transform: scale(1);
   transition: transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
-.animationImageBefore{
+
+.animationImageBefore {
   -webkit-transform: scale(0.8);
   transform: scale(0.8);
 }
+
 ///
-.recepts{
-  position:relative;
+.recepts {
+  position: relative;
 }
-.recepts-dashed, .main-catalog-dashed{
+.partners-page-dashed{
+  position: absolute;
+  right: -30%;
+  left: auto;
+  top: 350px;
+}
+.recepts-dashed, .main-catalog-dashed, .main-catalog-products-dashed,  {
   position: absolute;
   left: 0;
-  top:140px;
+  top: 140px;
   right: 0;
   bottom: 0;
 }
-.main-catalog-dashed{
+
+.main-catalog-dashed {
   top: 70%;
-  z-index:1;
+  z-index: 1;
 }
-.promo-dashed{
+canvas.main-catalog-products-dashed{
+  z-index: 1;
+  top: 17%;
+}
+.promo-dashed {
   position: absolute;
   z-index: 1 !important;
   // top:-56px !important;
   // left: 87px !important;
 }
-.about-dashed{
-  position:absolute;
-  z-index:1;
+
+.about-dashed {
+  position: absolute;
+  z-index: 1;
   right: 44px;
   top: 315px;
   left: auto;
 }
-.about-partners-dashed{
+
+.about-partners-dashed {
   position: absolute;
   top: 10px;
   left: -13px;
 }
+canvas.how-do-dashed-bg1,canvas.how-do-dashed-bg2,canvas.how-do-dashed-bg3,canvas.how-do-dashed-bg4,canvas.how-do-dashed-bg5{
+  position: absolute;
+}
+canvas.how-do-dashed-bg1{
+  top: 293px;
+  left: -30px;
+}
+canvas.how-do-dashed-bg2{
+  left:10%;
+  top: 24.5%;
+}
+canvas.how-do-dashed-bg3{
+  top: 39%;
+  left: -10px
+}
+canvas.how-do-dashed-bg4{
+  top: 51%;
+  left: -10px
+}
+.partners-download-dashed{
+  position: absolute;
+  top: 245px;
+  left: -5%;
+}
+
