--- a/app/templates/pages/catalog.pug
+++ b/app/templates/pages/catalog.pug
@@ -9,7 +9,7 @@ block variables
 
 block content
     +header()
-    section.main-catalog
+    section.main-catalog.visual-animation-base-block
       canvas.main-catalog-dashed(width="100%", height="100%")
       .content.main-catalog-box
         a.catalog-el(href="./catalog-products.html")
