[UPDATE/DEPLOY] Исправления на главной, обновление decs

--- a/app/scss/components/index/promo.scss
+++ b/app/scss/components/index/promo.scss
@@ -80,6 +80,7 @@
           z-index: 2;
           font-family: 'CeraPro';
           width: 40%;
+          margin-bottom: 52px;
 
           @include screen('md', 'max') {
             width: 50%;
@@ -88,6 +89,7 @@
           @include screen('sm', 'max') {
             width: 100%;
             padding-top: 50px;
+            margin-bottom: 0px;
           }
 
           & > h2 {
@@ -111,16 +113,32 @@
           & > p {
             font-size: 20px;
             line-height: 32px;
-            margin-bottom: 40px;
+            margin-bottom: 30px;
+            width: 90%;
+
+            span.nmtp {
+              background-size: 100%;
+              background: url('../images/nmtp-span-background.svg') no-repeat bottom;
+            }
+
+            span.originrecep {
+              background: url('../images/originrecept-span-background.svg') no-repeat bottom;
+              background-size: 100%;
+            }
 
             @include screen('xs', 'max') {
               font-size: 16px;
             }
           }
 
-          & > a {
+          .main-link {
             font-size: 17px;
             position: relative;
+            
+            & .bottomLines::before {
+              left: 56%;
+              top: -5px;
+            }
 
             &::after {
               content: "";
@@ -276,6 +294,19 @@
             }
             
           }
+
+          & > i.svg-icon.svg-cloud-1.cloud-1 {
+            position: absolute;
+            right: 0%;
+            top: 30%;
+          }
+
+          & > i.svg-icon.svg-cloud-2.cloud-2 {
+            position: absolute;
+            left: 42%;
+            top: 30%;
+            font-size: 5px;
+          }
         }
       }
       
@@ -312,7 +343,7 @@
         .text-desc {
           display: flex;
           flex-direction: column;
-          width: 50%;
+          width: 47%;
 
           @include screen('lg', 'max') {
             width: 100%;
@@ -327,6 +358,11 @@
             @include screen('xs', 'max') {
               font-size: 16px;
               line-height: 24px;
+            }
+
+            span {
+              background: url('../images/originrecept-span-background.svg') no-repeat bottom;
+              background-size: 100%;
             }
 
             &:last-child {
