--- a/app/scss/modules/tooltip.scss
+++ b/app/scss/modules/tooltip.scss
@@ -18,7 +18,7 @@
 	position: absolute;
 	bottom: 2em;
 	left: 50%;
-	margin-left: -150px;
+	margin-left: -180px;
 	width: 375px;
 	height: 275px;
 	display: flex;
@@ -26,6 +26,7 @@
     justify-content: center;
 	opacity: 0;
 	pointer-events: none;
+	z-index: 10;
 
 	@include screen('sm', 'max') {
 		width: 300px;
