[UPDATE] Новые эелементы в шаблонах

--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -149,7 +149,8 @@
   left: auto;
   top: 350px;
 }
-.recepts-dashed, .main-catalog-dashed, .main-catalog-products-dashed,  {
+
+.recepts-dashed, .main-catalog-dashed, .main-catalog-products-dashed  {
   position: absolute;
   left: 0;
   top: 140px;
