--- a/app/templates/pages/index.pug
+++ b/app/templates/pages/index.pug
@@ -52,7 +52,11 @@ block content
         .top-right
           h2.visual-animation-base Эксклюзивное право <br>на производство адыгейского сыра
           .visual-animation-base-block
-            p НМПТ гарантирует сохранение оригинальной рецептуры и точного следования технологии производства.
+            p 
+              span.nmtp НМПТ 
+              | гарантирует сохранение <br>
+              span.originrecep оригинальной рецептуры 
+              | и точного следования технологии производства.
             .tooltip.tooltip--cora(data-type="cora")
               .tooltip__trigger(role="tooltip", aria-describedby="info-cora")
                   +link('Что такое НМПТ', '#', 'false')
