--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -11,6 +11,10 @@ html(lang="ru")
         title=pageTitle
         link(href='css/style.min.css' rel='stylesheet')
     body
+        .loader
+            .img-back
+                .img-front-container
+                    .img-front
         .container
             block content
             include ../modules/footer
