--- a/app/templates/layouts/default.pug
+++ b/app/templates/layouts/default.pug
@@ -11,6 +11,10 @@ html(lang="ru")
         title=pageTitle
         link(href='css/style.min.css' rel='stylesheet')
     body
+        svg.shape-overlays.hide(xmlns="http://www.w3.org/2000/svg", xmlns:xlink="http://www.w3.org/1999/xlink", viewBox="0 0 100 100", preserveAspectRatio="none")
+            path.shape-overlays__path(d="M 0 100 C 50 100 50 100 100 100 V 100 H 0")
+            path.shape-overlays__path(d="M 0 100 C 50 100 50 100 100 100 V 100 H 0")
+            path.shape-overlays__path(d="M 0 100 C 50 100 50 100 100 100 V 100 H 0")
         .loader
             .img-back
                 .img-front-container
