--- a/app/scss/components/elements/elements.scss
+++ b/app/scss/components/elements/elements.scss
@@ -1,9 +1,9 @@
 
-.visual-animation-word {
+.visual-animation-word, .visual-animation-word-s {
   white-space: nowrap;
 }
 
-.visual-animation-showing {
+.visual-animation-showing, .visual-animation-showing-s {
   -webkit-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
@@ -27,9 +27,18 @@
   .visual-animation-showing-block > *:nth-child(#{$i}n) {
     animation-delay: #{$i * 30}ms;
   }
+
+  @for $j from 1 through 50 {
+    .visual-animation-showing-s > *:nth-child(#{$i}n) > *:nth-child(#{$j}n) {
+      animation-delay: #{$i*$j * 30}ms;
+    }
+  }
+  .visual-animation-showing-block-s > *:nth-child(#{$i}n) {
+    animation-delay: #{$i * 250}ms;
+  }
 }
 
-.visual-animation-base-block {
+.visual-animation-base-block, .visual-animation-base-block-s {
   -webkit-transform-style: flat;
   transform-style: flat;
 
@@ -43,7 +52,7 @@
   }
 }
 
-.visual-animation-showing-block {
+.visual-animation-showing-block, .visual-animation-showing-block-s {
   > * {
     opacity: 1.0;
     -webkit-animation: notransform 1s;
@@ -52,7 +61,7 @@
   }
 }
 
-.visual-animation-base {
+.visual-animation-base, .visual-animation-base-s {
   -webkit-perspective: 400px;
   perspective: 400px;
   -webkit-transform-style: flat;
@@ -110,6 +119,25 @@
   top: 0;
   transition: opacity 500ms ease 0s;
   z-index: 4;
+  > i{
+    position: absolute;
+    &:nth-child(1){
+      top: 70%;
+      right: 0%;
+      z-index: 5;
+      &:before{
+        transform: scale(0.8);
+      }
+    }
+    &:nth-child(2){
+      left: -20%;
+      top: 15%;
+      z-index: 5;
+      &:before{
+        transform: scale(0.5);
+      }
+    }
+  }
 }
 
 .image-background-hidden {
@@ -252,7 +280,7 @@ canvas.how-do-dashed-bg4 {
       height: 100%;
       left: -1px;
       top: 0;
-      overflow:hidden;
+      overflow: hidden;
 
       > .img-front {
         position: absolute;
@@ -268,6 +296,44 @@ canvas.how-do-dashed-bg4 {
   }
 }
 
-.hide-display-for-loader{
-  display:none !important;
+.hide-display-for-loader {
+  display: none !important;
 }
+
+.shape-overlays {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9990;
+  display: block;
+  opacity: 1.0;
+  padding: 20px 20px 0 20px;
+
+  &.hide {
+    opacity: 0.0;
+    display: none;
+  }
+
+  &.is-opened {
+    display: block;
+    transition: opacity 100ms ease-in-out;
+
+  }
+
+  .shape-overlays__path:nth-of-type(1) {
+    fill: #d2ffe2;
+  }
+
+  .shape-overlays__path:nth-of-type(2) {
+    fill: #FFFFFF;
+  }
+
+  .shape-overlays__path:nth-of-type(3) {
+    fill: #f9efe1;
+  }
+}
+
+
+
