--- a/app/templates/pages/catalog.pug
+++ b/app/templates/pages/catalog.pug
@@ -14,18 +14,26 @@ block content
       .content.main-catalog-box
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
+            +icon('rhombus', 'svg').rhombus-1
+            +icon('rhombus', 'svg').rhombus-2
             img(src="./images/img-product-1.png", alt="")
           .catalog-el-text Адыгейские сыры
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
+            +icon('rhombus', 'svg').rhombus-1
+            +icon('rhombus', 'svg').rhombus-2
             img(src="./images/img-product-2.png", alt="")
           .catalog-el-text Вытяжные сыры
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
+            +icon('rhombus', 'svg').rhombus-1
+            +icon('rhombus', 'svg').rhombus-2
             img(src="./images/img-product-3.png", alt="")
           .catalog-el-text Масло и спред
         a.catalog-el(href="./catalog-products.html")
           .catalog-el-img
+            +icon('rhombus', 'svg').rhombus-1
+            +icon('rhombus', 'svg').rhombus-2
             img(src="./images/img-product-4.png", alt="")
           .catalog-el-text Cыворотка
         .text-bottom Продукция
